k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  namespace: tomemming
spec:
  selector:
    matchLabels:
      app: todo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: php-fpm
          image: ghcr.io/tinux-it/todo:latest
          volumeMounts:
            - name: app-volume
              mountPath: /app
            - name: php-socket
              mountPath: /php-socket
        - name: nginx
          image: nginx:stable-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: app-volume
              mountPath: /app
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
            - name: php-socket
              mountPath: /php-socket
      volumes:
        - name: app-volume
          emptyDir: {}
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: php-socket
          emptyDir: {}
